kubernetes/applicativo/ping.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ping-service
  template:
    metadata:
      labels:
        app: ping-service
    spec:
      serviceAccountName: spring-app-sa # Utilizzo del ServiceAccount per accedere, il pod deve utilizzare il ServiceAccount con i permessi necessari per accedere alle risorse Kubernetes richieste per il service discovery e il load balancing.
      containers:
        - name: ping-service
          image: mircocennamo82/my-repo:ping-service
          ports:
            - containerPort: 8089
          volumeMounts:
            - name: apm-agent
              mountPath: /agent
            - name: upload-volume
              mountPath: /data/uploads
      volumes:
        - name: apm-agent
          emptyDir: { }
        - name: upload-volume
          persistentVolumeClaim:
            claimName: upload-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: ping-service
spec:
  sessionAffinity: None  # Assicura che le richieste siano bilanciate tra i pod
  selector:
    app: ping-service  # Deve corrispondere alle label del Deployment
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8089
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: ping-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ping-service
                port:
                  number: 8090
